Reorganized .gitignore with brief section comments and existing project-specific ignores kept together. Added common patterns for C/C++ build outputs, Python caches/venvs, R artifacts, logs, and editor/OS metadata to avoid accidental commits.

--- a/.gitignore
+++ b/.gitignore
@@ -1,40 +1,80 @@
+# Project-specific binaries and outputs
 performance/pmetindex
 performance/pmetParallel
 scripts/pmetindex
 scripts/pmetParallel
+scripts/pmet
 src/pmet/bin/pmet
 src/indexing/bin/pmetindex
 src/pmetParallel/bin/pmetParallel
-src/pmet/test/motif_output.txt
-src/pmet/test/progress.log
 src/pmetParallel/bin/out/
-results/PMETindex/fimo/
-results/PMETindex/memefiles/
-data/anno.gff3temp
-results/PMETindex/IC.txt
-results/PMETindex/promoter_lengths.txt
-results/PMETindex/promoters.bg
-src/indexing/test/binomial_thresholds.txt
-results/PMETindex/fimohits/
+src/pmetParallel/bin
+src/pmet/bin
+src/indexing/bin
+src/indexing/build
+src/meme-5.5.3/build
+src/meme-5.5.3/fimo_out
 results/PMETindex/
 results/PMET/
-scripts/pmet
 results/PMET_parallel/
+results/PMETindex/fimo/
+results/PMETindex/fimohits/
+results/PMETindex/memefiles/
 results/PMETindex_intervals/fimo/
 results/PMETindex_intervals/fimohits/
 results/PMETindex_intervals/memefiles/
+results/PMETindex/IC.txt
+results/PMETindex/promoter_lengths.txt
+results/PMETindex/promoters.bg
 results
-src/pmet/test_data
-src/indexing/bin
-src/indexing/build
-anno.gff3
-src/meme-5.5.3/build
-src/pmetParallel/bin
-src/pmet/bin
 fimo
+anno.gff3
 genome.fasta
-src/meme-5.5.3/fimo_out
-test
 TAIR10.fasta
 TAIR10.gff3
+
+# Test data and fixtures
+src/pmet/test_data
+src/pmet/test/motif_output.txt
+src/pmet/test/progress.log
+src/indexing/test/binomial_thresholds.txt
+test
+
+# Intermediate or temporary data
+data/anno.gff3temp
+src/pmetParallel/bin/out/
+
+# C/C++ build artifacts
+*.o
+*.obj
+*.so
+*.a
+*.dylib
+*.dSYM/
+*.out
+build/
+bin/
+
+# Python cache and virtual environments
+__pycache__/
+*.py[cod]
+.venv/
+venv/
+.env
+.python-version
+.ipynb_checkpoints/
+
+# R-related
 .Rhistory
+.RData
+.Rproj.user/
+
+# Logs and runtime files
+logs/
+*.log
+
+# Editor and OS metadata
+.DS_Store
+.idea/
+.vscode/
+*.swp
