ignore result, build, legacy and other folders

--- a/.gitignore
+++ b/.gitignore
@@ -4,30 +4,19 @@ performance/pmetParallel
 scripts/pmetindex
 scripts/pmetParallel
 scripts/pmet
-src/pmet/bin/pmet
-src/indexing/bin/pmetindex
-src/pmetParallel/bin/pmetParallel
-src/pmetParallel/bin/out/
-src/pmetParallel/bin
-src/pmet/bin
-src/indexing/bin
-src/indexing/build
-src/meme-5.5.3/build
-src/meme-5.5.3/fimo_out
-results/PMETindex/
-results/PMET/
-results/PMET_parallel/
-results/PMETindex/fimo/
-results/PMETindex/fimohits/
-results/PMETindex/memefiles/
-results/PMETindex_intervals/fimo/
-results/PMETindex_intervals/fimohits/
-results/PMETindex_intervals/memefiles/
-results/PMETindex/IC.txt
-results/PMETindex/promoter_lengths.txt
-results/PMETindex/promoters.bg
-results
-fimo
+src/pmet/bin/
+src/indexing/bin/
+src/indexing/build/
+src/meme-5.5.3/build/
+src/meme-5.5.3/fimo_out/
+src/pmetParallel/bin/
+
+# Results and data directories
+results/
+build/
+external/
+legacy/
+fimo/
 anno.gff3
 genome.fasta
 TAIR10.fasta
